[package]
name = "mewn"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/adit-prawira/mewn"

[dependencies]
anyhow = "1.0.102"
clap = {version = "4.6.1", features = ["derive"]} 
crossterm = "0.29.0"
etherparse = "0.20.2"
pcap = "2.4.0"
ratatui = "0.30.1"
serde = {version = "1.0.228", features = ["derive"]} 
serde_json = "1.0.150"
sysinfo = "0.38.4"
tokio = {version = "1.52.3", features = ["full"]}  

[dev-dependencies]
tempfile = "3.27.0"
